# Trading-Bot-Project

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile.api  Dockerfile.optimizer  Dockerfile.runner  Dockerfile.worker  README.md  alembic.ini  docker-compose.optimizer.yml  docker-compose.optuna.yml  docker-compose.runner.yml  docker-compose.yml  pine_srcipt.md  pyproject.toml  requirements.txt  resultado.json  resultado_hybrid.json  resultado_rsi_div.json  resultado_rsi_div_estricto.json
alembic/: env.py
app/: config.py  deps.py  main.py
data/: btc_forward_enriched.csv  btc_forward_trades.csv  forward_trades_enriched.csv  paper_trades.csv  paper_trades_v2.csv  simple_paper_trades.csv  trendbot_btc_trades.csv
docs/: paper_trading_guide.md
monitoring/: prometheus.yml
optimize_results/: pareto_results_pareto.json  rsi_nsga2_BTC-USDT_5m.db
scripts/: SIGNAL_SERVICE.md  backtest_viewer.html  check_runner_health.py  ingest_all.py  ingest_data.py  merge_optimize_results.py  merge_parquet.py  optimize_optuna.py  optimize_rsi_divergence.py  optimize_strategy.py  optimize_trend_following.py  rsi_nsga2_BTC-USDT_5m.db  run_1h_filter_test.py  run_backtest.py  run_confidence_analysis.py  run_cross_pair.py  run_fix_validation.py  run_htf_comparison.py  run_mae_mfe_analysis.py  run_multi_paper.py  run_multi_paper_v2.py  run_paper.py  run_paper_trend.py  run_penetration_corrected.py  run_penetration_test.py  run_permutation_test.py  run_regime_analysis.py  run_rr_plateau.py  run_signal_service.py  run_simple_grid.py  run_simple_paper.py  run_structural_plots.py  (+8 more)
(+99 files in other folders)
